--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -268,6 +268,12 @@
 			<li>macOS 14 Sonoma</li>
 		</ul>
 	</li>
+	<li>詳細
+		<ul>
+			<li>グラフィックス: Metal</li>
+			<li>SDK: AppKit</li>
+		</ul>
+	</li>
 </ul>
 <br>
 <h3>Linux/BSD</h3>
@@ -275,13 +281,13 @@
 	<li>開発ツール
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
-			<li>グラフィックス: Qt6
+			<li>グラフィックス: Qt6 (Vulkan or OpenGL backend)
 		</ul>
 	</li>
 	<li>出力ゲーム
 		<ul>
 			<li>OS: Linux / FreeBSD / NetBSD
-			<li>グラフィックス: X11, OpenGL 3
+			<li>グラフィックス: X11 and OpenGL 3.0
 		</ul>
 	</li>
 </ul>
@@ -309,6 +315,12 @@
 			<li>iOS 16 / iPadOS 16</li>
 			<li>iOS 17 / iPadOS 17</li>
 			<li>visionOS 1</li>
+		</ul>
+	</li>
+	<li>詳細
+		<ul>
+			<li>グラフィックス: Metal</li>
+			<li>SDK: UIKit</li>
 		</ul>
 	</li>
 </ul>
@@ -339,13 +351,19 @@
 			<li>Android 14</li>
 		</ul>
 	</li>
+	<li>詳細
+		<ul>
+			<li>グラフィックス: OpenGL ES 2.0</li>
+			<li>SDK: Android NDK</li>
+		</ul>
+	</li>
 </ul>
 <br>
 <h3>Webブラウザ版</h3>
 <ul>
 	<li>開発ツール (まだ制作中)
 		<ul>
-			<li><a href="/vls/">Google Chromeのみ対応</a></li>
+			<li><a href="/vls/">Google Chromeのみ対応</a>, フォルダの入れ子に非対応</li>
 		</ul>
 	</li>
 	<li>出力ゲーム
@@ -355,6 +373,12 @@
 			<li>Microsoft Edge</li>
 			<li>Safari</li>
 			<li>Mozilla Firefox</li>
+		</ul>
+	</li>
+	<li>詳細
+		<ul>
+			<li>グラフィックス: WebGL 2</li>
+			<li>SDK: Emscripten</li>
 		</ul>
 	</li>
 </ul>
