--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.22 (2024/5/9):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.22.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.22.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.24 (2024/5/9):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.24.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.24.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.24 2024/5/9 <ul> <li>Changed to apply scenario when the Continue button pressed</li> <li>Fixed a bug of Ctrl key shortcuts</li> <li>Fixed a bug of folder choice</li> </ul> </li>
 <li>Polaris Engine 1.2.22 2024/5/9 <ul> <li>Added a modofier to change the font color to default</li> </ul> </li>
 <li>Polaris Engine 1.2.21 2024/5/9 <ul> <li>Changed to insert 4 spaces if it is not a completion</li> </ul> </li>
 <li>Polaris Engine 1.2.20 2024/5/9 <ul> <li>Fixed a bug of file open dialog</li> <li>Swapped the behavior of Shift+Enter and Enter</li> </ul> </li>
