--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.26 (2024/5/10):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.26.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.26.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.27 (2024/5/10):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.27.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.27.dmg">Mac版 Polaris Engine</a><br>
 <a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -412,6 +412,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.27 2024/5/10 <ul> <li>ファイル選択ダイアログの改善</li> <li>Undo/Redoをいったん封印 (リッチエディットコントロールの制約)</li> <li>全画面時にメニューバーを表示</li> </ul> </li>
 <li>Polaris Engine 1.2.26 2024/5/10 <ul> <li>オートモードスライダーのバグ修正</li> </ul> </li>
 <li>Polaris Engine 1.2.25 2024/5/9 <ul> <li>ファイル選択のバグを回避</li> </ul> </li>
 <li>Polaris Engine 1.2.24 2024/5/9 <ul> <li>「続ける」ボタンを押したときに編集を反映するように修正</li> <li>Ctrlキーのバグを修正</li> <li>ファイル選択のバグを修正</li> </ul> </li>
