--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.27 (2024/5/10):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.27.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.27.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.28 (2024/5/10):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.28.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.28.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.28 2024/5/10 <ul> <li>Changed to open dialog at the last project folder</li> </ul> </li>
 <li>Polaris Engine 1.2.27 2024/5/10 <ul> <li>Improved the file chooser dialogs</li> <li>Disabled Undo/Redo</li> <li>Changed to show the menu bar on the full screen mode</li> </ul> </li>
 <li>Polaris Engine 1.2.27 2024/5/10 <ul> <li>Fixed a bug of the auto mode slider</li> </ul> </li>
 <li>Polaris Engine 1.2.25 2024/5/9 <ul> <li>Avoided a bug of file dialog cancel</li> </ul> </li>
