--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.30 (2024/5/10):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.30.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.30.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.31 (2024/5/10):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.31.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.31.dmg">Mac版 Polaris Engine</a><br>
 <a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -412,6 +412,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.31 2024/5/10 <ul> <li>プロジェクトファイルの拡張子を関連付け</li> </ul> </li>
 <li>Polaris Engine 1.2.30 2024/5/10 <ul> <li>アップデートすると最後に開いたフォルダを忘れる問題を修正</li> </ul> </li>
 <li>Polaris Engine 1.2.29 2024/5/10 <ul> <li>Look&Feel変更とコマンド挿入前にシナリオテキストをスクリプトモデルに反映するよう変更</li> </ul> </li>
 <li>Polaris Engine 1.2.28 2024/5/10 <ul> <li>最後に開いたフォルダを保存するように変更</li> </ul> </li>
