--- a/web/dl/index.html
+++ b/web/dl/index.html
@@ -106,9 +106,9 @@
 <h4>ダウンロード</h4>
 <p>
 <!-- ※ここはリリース時に自動で更新されます -->
-<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.35 (2024/5/10):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.35.exe">Windows版 Polaris Engine</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.35.dmg">Mac版 Polaris Engine</a><br>
+<!-- LATEST-VERSION-AND-DATE -->最新版 Polaris Engine 1.2.36 (2024/5/11):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.36.exe">Windows版 Polaris Engine</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.36.dmg">Mac版 Polaris Engine</a><br>
 <a href="/dl/install-polaris-engine.sh" download>Linux/BSD版 Polaris Engine</a> (Ubuntu, Debian, Fedora, RedHat, FreeBSD)<br>
 <br>
 モバイル版 (編集/プレビューのみ):<br>
@@ -412,6 +412,7 @@
         <ul>
 <!-- ここに自動でリリースノートが挿入されます -->
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.36 2024/5/11 <ul> <li>キャラの目パチと口パクの画像を改善</li> </ul> </li>
 <li>Polaris Engine 1.2.35 2024/5/10 <ul> <li>音量の初期値が適用されないバグを修正</li> </ul> </li>
 <li>Polaris Engine 1.2.34 2024/5/10 <ul> <li>リップシンクの文字間隔 character.lipsync.chars を追加</li> </ul> </li>
 <li>Polaris Engine 1.2.33 2024/5/10 <ul> <li>リップシンクを改善</li> </ul> </li>
