--- a/web/en/dl/index.html
+++ b/web/en/dl/index.html
@@ -81,9 +81,9 @@
 <br>
 <h4>Downloads</h4>
 <p>
-<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.37 (2024/5/12):<br>
-<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.37.exe">Download Polaris Engine for Windows</a><br>
-<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.37.exe">Download Polaris Engine for Mac</a><br>
+<!-- LATEST-VERSION-AND-DATE -->Latest 1.2.38 (2024/5/12):<br>
+<!-- LATEST-EXE --><a href="/dl/polaris-engine-1.2.38.exe">Download Polaris Engine for Windows</a><br>
+<!-- LATEST-DMG --><a href="/dl/polaris-engine-1.2.38.exe">Download Polaris Engine for Mac</a><br>
 <a href="https://raw.githubusercontent.com/ktabata/polaris-engine/master/install-polaris-engine.sh">Linux/BSD: Polaris Engine</a><br>
 <br>
 <a href="#relnote">Release Notes</a>
@@ -247,6 +247,7 @@
 			<div class="accordion-body">
         <ul>
 <!-- LATEST-RELEASE-NOTE -->
+<li>Polaris Engine 1.2.38 2024/5/12 <ul> <li>Fixed the Android apk build</li> </ul> </li>
 <li>Polaris Engine 1.2.37 2024/5/12 <ul> <li>SOrow renewed the Japanese and English novel style template</li> </ul> </li>
 <li>Polaris Engine 1.2.36 2024/5/11 <ul> <li>Improved the eye-blink and lip-sync images</li> </ul> </li>
 <li>Polaris Engine 1.2.35 2024/5/10 <ul> <li>Fixed a bug where the initial volumes are not applied</li> </ul> </li>
